force-app/main/default/objects/Account/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <formula>IMAGE(&apos;https://bwipjs-api.metafloor.com/?bcid=code128&amp;text=&apos;+Name+&apos;&amp;scale=2&amp;rotate=N&amp;includetext&amp;backgroundcolor=ffffff&apos;, Name, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bar Code</label>
    <type>Text</type>
</CustomField>