force-app/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Chhatrapati Sambhajinagar</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Kairpur</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
            <value>
                <fullName>Islamabad</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>California City</fullName>
            </value>
            <value>
                <fullName>Homer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>