force-app/main/default/objects/Account/fields/Dynamic_Name_Image__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Name_Image__c</fullName>
    <formula>IMAGE(&apos;https://dummyimage.com/100x100/CCC4FF/563BFF&amp;text=&apos;+UPPER(LEFT(Name, 2))
, UPPER(LEFT(Name, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Name Image</label>
    <type>Text</type>
</CustomField>