force-app/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharastra</fullName>
            </value>
            <value>
                <fullName>Rajstan</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Sindh</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>